AM_CFLAGS = -Wall $(LIBXML2_CFLAGS) $(SQLITE_CFLAGS)
AM_LDFLAGS = $(LIBXML2_LIBS) $(SQLITE_LIBS)
bin_PROGRAMS = mwbgrader
mwbgrader_SOURCES = catpath.c \
	catpath.h \
	config.h \
	dbop.c \
	dbop.h \
	debug.c \
	debug.h \
	grad.c \
	grad.h \
	grading.c \
	grading.h \
	kwsearch.c \
	kwsearch.h \
	levenshtein.c \
	miniz.c \
	miniz.h \
	mwbgrader.c \
	mwbkey.c \
	mwbkey.h \
	scanxml.c \
	scanxml.h \
	schema.c \
	schema.h \
	sql_lev.c \
	sql_sqrt.c \
	strbuf.c \
	strbuf.h \
	synth.c \
	synth.h \
	xml_reader.h \
	xmlnodes.h
